@@ -966,15 +966,8 @@ static char *builtin_masters_update_info[] = {
   "ADD QWS master://192.246.40.37:27003 id Team Fortress",
   "ADD QWS master://192.246.40.37:27004 id Misc",
   "ADD QWS master://192.246.40.37:27006 id Deathmatch",
-  "ADD QWS master://204.182.161.2:27000 PlanetQuake",
-  "ADD QWS master://203.55.240.100:27000 Australia",
-  "ADD QWS master://200.255.244.2:27000 Brazil",
   "ADD QWS master://qwmaster.ocrana.de:27000 Germany",
-  "ADD QWS master://207.88.6.18:27000 FortressFest TF",
-  "ADD QWS master://master.quakeworld.ru:27000 Russia",
-  "ADD QWS master://194.251.249.32:27000 iNET (Finland)",
-  "ADD QWS master://qwmaster.mondial.net.au:27000 Mondial Aussie",
-  "ADD QWS master://qwmaster.barrysworld.com:27000 BarrysWorld (UK)",
+  "ADD QWS master://santa.quakeforge.net:27000 QuakeForge",
 
   "ADD Q2S master://satan.idsoftware.com:27900 id",
   "ADD Q2S master://q2master.planetquake.com:27900 PlanetQuake", 
