@@ -1,4 +1,7 @@
 Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
+- Update QW master list, remove non-working and add QuakeForge's.
+
+Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
 - Updated Catalan and Spanish translations.
 
 Nov 5, 2002: Alex Burger <alex_b@users.sourceforge.net>
